# Task-Manager

./: .coverage  .gitignore  1db.sqlite3  Gemfile  OLDdb.sqlite3  README.md  db.sqlite3  makefile  pyproject.toml
labels/: forms.py  views.py
status/: views.py
status/migrations/: 0003_labels.py
task_manager/: forms.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  views.py
task_manager/status/: forms.py  models.py  views.py
task_manager/status/migrations/: 0001_initial.py  0002_alter_status_created_date.py  0004_alter_labels_name_alter_status_name.py
task_manager/tasks/: forms.py  models.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_labels.py  0003_rename_labels_task_labels.py
task_manager/templates/: base.html  footer.html  header.html  home.html  index.html
task_manager/templates/labels/: confirm_delete.html  create_labels.html  edit_labels.html  label.html
task_manager/templates/registration/: login.html
task_manager/templates/status/: confirm_delete.html  create_status.html  edit_status.html  status_task.html
task_manager/templates/tasks/: confirm_delete.html  create_tasks.html  details.html  edit_tasks.html  tasks.html
task_manager/templates/users/: confirm_delete.html  create_user.html  edit_user.html  user_list.html  users.html
task_manager/users/: forms.py  mixins.py  models.py  urls.py  views.py
tasks/: forms.py  models.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_delete_tasks.py
tests/: test_main_forms.py  test_main_urls.py  test_main_view.py
(+3 files in other folders)
