[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["nikogamsahurdia <eleron96@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"
django-bootstrap5 = "^23.3"
crispy-bootstrap4 = "^2022.1"
django-crispy-forms = "^2.0"
django-bootstrap4 = "^23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
